compiler/tests/compiler/must_fail/t_17.mil.exp.err
Parsing tests/compiler/must_fail/t_17.mil as MIL

tests/compiler/must_fail/t_17.mil:9:3: 9:8 error: wrong number of arguments: got 1, expected 0
  bar(x);
  ^^^^^^
