compiler/tests/compiler/must_fail/t_17.mil
/* function call with wrong argument arity */

fn bar() {
}

fn foo() {
  x : stack u64;
  x = 42;
  bar(x);
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
